--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "test": "jest tests"
   },
   "author": "Sara Ulusoy",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "underscore": "^1.13.6"
+  }
 }
